--- a/TODO.TXT
+++ b/TODO.TXT
@@ -15,6 +15,6 @@ see _get_multi de FRED
 see Yahoo Options
 see Yahoo Quotes
 
-see Yahoo QL YQL
+see Yahoo Query Language YQL
     https://developer.yahoo.com/yql/
     https://github.com/pydata/pandas/issues/7104
