--- a/TODO.TXT
+++ b/TODO.TXT
@@ -20,3 +20,4 @@ see Yahoo Query Language YQL
     https://github.com/pydata/pandas/issues/7104
     https://github.com/femtotrader/StockScraper/blob/master/stockretriever.py
     https://www.datatables.org/
+    https://github.com/project-fondue/python-yql (see forks)
